--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -25,9 +26,12 @@
     "express-mysql-session": "^2.1.7",
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
+    "jest": "^27.5.0",
     "morgan": "^1.10.0",
+    "mysql2": "^2.3.3",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
+    "supertest": "^6.2.2",
     "timeago.js": "^4.0.2"
   },
   "devDependencies": {
