--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
     "jest": "^27.5.0",
+    "method-override": "^3.0.0",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "passport": "^0.5.2",
